added remaining files

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
     </div>
 
     <!--links in top left corner-->
-    <!-- <div class="button">
+    <div class="button">
       <button type="button" class="this-button"><a href="home.html" class="nav">home</a></button>
       <button type="button" class="button"><a href="intendedClasses.html" class="nav">intended classes</a></button>
       <button type="button" class="button"><a href="myProjects.html" class="nav">my projects</a></button>
-    </div> -->
+    </div>
 
     <div id="body">
 
