get back to index from home

--- a/home.html
+++ b/home.html
@@ -104,6 +104,7 @@
       <button type="button" class="this-button"><a href="home.html" class="nav">home</a></button>
       <button type="button" class="button"><a href="intendedClasses.html" class="nav">intended classes</a></button>
       <button type="button" class="button"><a href="myProjects.html" class="nav">my projects</a></button>
+      <button type="button" class="button"><a href="index.html" class="nav">back to main</a></button>
     </div>
 
     <div id="body">
