added all links to index

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
       </div>
       <img src="images/index_cover.jpeg" alt="Tony Photo"></img>
-      <a href="home" style="padding-right:20px">about me</a>
-      <a href="intendedClasses" style="padding-left: 70px;">course work</a>
+      <a href="home.html" style="padding-right:20px">about me</a>
+      <a href="intendedClasses.html" style="padding-left: 70px;">course work</a>
       <a href="url"style="padding-left: 70px;">experience</a>
-      <a href="url"style="padding-left: 70px;">projects</a>
+      <a href="myProjects.html"style="padding-left: 70px;">projects</a>
     </div>
   </body>
 </html>
